# groktocrawl

./: .coverage  .dockerignore  .env.example  .env.sample  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CI_FAILURE_REPORT.md  CONTRIBUTING.md  README.md  SECURITY.md  VISION.md  docker-compose.yml  firecrawl-crawl-feature-research.md  groktocrawl  openapi.json  pyproject.toml  release-notes.md
.codex/: hooks.json
.devcontainer/: Dockerfile  devcontainer.json
.factory/mission-research/: adr-format.md  codebase-investigation.md  infrastructure-check.md  mcp-research.md  saru-deployment.md  saru-docker-check.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agents-md-check.yml  architecture.yml  cli-coverage.yml  code-quality.yml  docker.yml  docs-surface.yml  droid-review.yml  pip-audit.yml  release-please.yml
.hermes/plans/: 2026-05-23_234000-unified-activity-endpoint.md  2026-05-24_000100-llmstxt-description-quality.md
agent-svc/: Dockerfile  pyproject.toml
agent-svc/agent/: analytics_exporter.py  api.py  app.py  auth.py  crawl_cache.py  crawl_stream.py  crawler.py  dedup.py  exceptions.py  health.py  link_extractor.py  llm.py  llmstxt.py  metrics.py  models.py  monitor.py  nl_params.py  planner.py  rate_limiter.py  research.py  research_memory.py  scraper_client.py  searxng_client.py  semantic_client.py  session.py  session.py.bak  session_store.py  settings.py  sitemap_parser.py  store.py  tasks.py  webhook.py  worker.py
agent-svc/agent/research/: __init__.py  citations.py  contents.py  discovery.py  enrich.py  events.py  gaps.py  loop.py  memory.py  plan.py  prompts.py  rerank.py  scoring.py  search.py  similar.py  state.py  streaming.py  utils.py
agent-svc/agent/routes/: __init__.py  _helpers.py  activity.py  agent.py  browser.py  citations.py  crawl.py  enrich.py  extract.py  find_similar.py  llmstxt.py  map.py  monitor.py  parse.py  plan.py  research_memory.py  scrape.py  search.py  session.py  webhook.py
agent-svc/agent/tests/: test_stack.py
browser-svc/: Dockerfile  pyproject.toml
browser-svc/browser_svc/: app.py  settings.py
common/: analytics.py  circuit_breaker.py  features.py  logging.py  metrics.py  middleware.py  retry.py  url.py
docs/: architecture.md  observability.md
docs/adr/: 0001-adapter-registry-pre-pipeline-hook.md  0002-regex-dispatch-with-priority.md  0003-per-adapter-fallback-chain.md  0004-two-phase-result-markdown-and-metadata.md  0005-in-repo-adapters-with-entry-point-path-reserved.md  0006-auto-registration-via-adapter-decorator.md  0007-adapter-timeout-and-circuit-breaker.md  0008-three-layer-testing-strategy.md  0009-zero-cli-surface-changes.md  0010-five-tier-scraper-with-llm-recovery.md  0011-stealth-playwright-configuration.md  0012-webhook-delivery-for-async-endpoints.md  0015-barrier-classification.md  (+33 more)
droid-wiki/: .wiki-meta.json  by-the-numbers.md  deployment.md  lore.md  maintainers.md  security.md
llm-svc/: Dockerfile  pyproject.toml
mcp-svc/: Dockerfile  browser_handler.py  groktocrawl_client.py  mcp_server.py  pyproject.toml  session_store.py
mcp-svc/tests/: __init__.py  test_client.py  test_integration.py  test_mcp_server.py  test_session_store.py
ofelia/: config.ini
parse-svc/: Dockerfile  pyproject.toml
parse-svc/parse_svc/: app.py
portal-svc/: Dockerfile  pyproject.toml
portal-svc/portal/: app.py
portal-svc/portal/templates/: index.html
scraper-svc/: Dockerfile  docker-entrypoint.sh  pyproject.toml
scraper-svc/scraper/: app.py  barrier.py  cache.py  captcha.py  cookie_store.py  dns_guard.py  exceptions.py  extract.py  fetch.py  fetch_quality.py  fetch_strategy.py  fetch_tiers.py  meta.py  metadata.py  playwright_retry.py  politeness.py  proxy.py  recovery.py  settings.py  stealth.py
scraper-svc/scraper/adapters/: __init__.py  _helpers.py  abuseipdb.py  ashbyhq.py  base.py  bluesky.py  censys.py  crtsh.py  cveorg.py  exploitdb.py  github.py  github_social.py  greenhouse.py  gutenberg.py  hibp.py  mitreattack.py  nvd.py  otx.py  reddit.py  shodan.py  shopify.py  substack.py  vaco.py  virustotal.py  vulncheck.py  youtube.py
scraper-svc/tests/: test_extract.py
scripts/: check-cli-coverage.py  check-docs-surface.py
sdk-examples/: curl.md
search-svc/: Dockerfile  pyproject.toml
searxng/: docker-entrypoint.sh  settings.yml
semantic-svc/: Dockerfile  app.py  auth.py  metrics.py  models.py  pyproject.toml  retention.py  router_index.py  router_migration.py  router_search.py
test-site/: Dockerfile  pyproject.toml
tests/: conftest.py  m1_tests.py  test_adapters_base.py  test_answer_endpoint.py  test_auth.py  test_browser_svc_integration.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_crawl_cache.py  test_crawler.py  test_features.py  test_link_extractor.py  test_llm.py  test_llm_svc_observability.py  test_llmstxt_unit.py  test_logging.py  test_metadata.py  test_models.py  test_parse.py  test_phase2_semantic.py  test_phase3_retention.py  test_politeness.py  test_portal.py  test_portal_svc_unit.py  test_prompts.py  test_quality.py  test_reddit_adapter.py  test_research.py  test_scraper_client.py  test_search_svc_observability.py  test_semantic_svc_integration.py  test_semantic_svc_unit.py  test_sitemap_parser.py  test_stack.py  test_stealth.py  test_store.py  test_substack.py  test_urlutil.py  test_webhook.py  (+1 more)
(+97 files in other folders)
