[project]
name = "agent-svc"
version = "0.2.0"
description = "GroktoCrawl API and worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "rq>=2.2.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "beautifulsoup4>=4.13.0",
    "python-multipart>=0.0.20",
]
