[project]
name = 'mcp-svc'
version = '0.1.0'
description = 'MCP server for GroktoCrawl'
requires-python = '>=3.11'
dependencies = [
    'mcp>=1.28.1',
    'httpx>=0.27.0',
    'pydantic>=2.0.0',
]

[tool.setuptools]
py-modules = [
    'mcp_server',
    'groktocrawl_client',
    'session_store',
    'browser_handler',
]
