[project]
name = 'mcp-svc'
version = '0.3.0'
description = 'MCP server for GroktoCrawl — exposes all tools via Model Context Protocol'
requires-python = '>=3.12'
dependencies = [
    'mcp==1.27.0',
    'httpx==0.28.1',
    'pydantic==2.11.4',
    'uvicorn[standard]==0.34.3',
]

[tool.setuptools]
py-modules = [
    'mcp_server',
    'groktocrawl_client',
    'session_store',
]
