[project]
name = "parse-svc"
version = "0.1.1"
description = "GroktoCrawl document parsing service — PDF, DOCX, PPTX, XLSX to markdown"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "markitdown>=0.1.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "tabulate>=0.9.0",
    "pillow>=10.0.0",
]
