[project]
name = "portal-svc"
version = "0.1.0"
description = "GroktoCrawl web portal — single-search-bar UI for human users"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.20",
]
